--- a/inedx.html
+++ b/inedx.html
@@ -2,10 +2,21 @@
 <title>Hi</title>
 
 <head></head>
+<script>
+
+</script>
 
 <body>
-    <h1>你轻轻的走过那 在风雨花丛中</h1>
-    <h1>每一点一滴带走 是我醒来的梦</h1>
+    <div>
+        <div style="display: flex;justify-content: center;">
+            <h1>我不想成为你疲倦时第一个被放弃的存在<span style="display: inline-block;color: rgb(196, 184, 196);">《请回答1988》</span></h1>
+        </div>
+        <div style="width: 100%;text-align: center;">
+            <img style="max-width: 100%;height: auto;max-width: 50%;"
+                src="./images/104f300c5efc7171edd38d42732eb9e.jpg" />
+        </div>
+        <audio style="display: none;" autoplay="autoplay" controls src="./你不要担心.flac"></audio>
+    </div>
 </body>
 
 </html>
